# ARQON_MVP_PROJECT

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CI_HANDOFF.md  README.md  README_USER.txt  START_ARQON_BROWSER_GUARD.cmd  START_ARQON_PROTECTION.cmd  START_ARQON_USER_MODE.cmd  STOP_ARQON_PROTECTION.cmd  pyproject.toml  requirements-dev.txt  requirements.txt
browser-extension/chromium/: README.md  background.js  extension.css  manifest.json  options.html  options.js  popup.html  popup.js  warning.html  warning.js
config/: browser-guard.yml  default.yml  policy-signing-public.keys.json  policy-signing-public.pem  user-mode.yml
dashboard/: app.js  index.html  styles.css
scripts/: build_release.ps1  build_variants.ps1  install_arqon.ps1  install_startup_task.ps1  install_tray_startup_task.ps1  rollback_arqon.ps1  run_agent.ps1  run_user_console.ps1  start_tray.ps1  start_user_protection.ps1  stop_arqon_runtime.ps1  stop_user_protection.ps1  switch_mode.ps1  uninstall_startup_task.ps1  uninstall_tray_startup_task.ps1  update_arqon.ps1  validate_mvp.ps1
src/arqon_guardian/: __init__.py  agent.py  audit.py  cli.py  config.py  crypto_signing.py  diagnostics.py  events.py  health.py  logging_setup.py  policy_pack.py  quarantine.py  reputation.py  retention.py  rules.py  runtime_lock.py  secret_store.py  signature.py  supervisor.py  update_pack.py
src/arqon_guardian/modules/: __init__.py  download_monitor.py  firewall_manager.py  local_api.py  network_privacy.py  policy_updater.py  privacy_hardening.py  (+1 more)
tests/: test_reputation.py  test_rules.py  test_runtime_lock.py
