[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arqon-agent"
version = "0.1.0"
description = "ARQON local-first Windows security agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil==6.1.1",
  "watchdog==5.0.3",
  "PyYAML==6.0.2",
  "cryptography==44.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.9.10",
  "mypy==1.15.0",
  "bandit==1.8.2",
  "build==1.2.2.post1",
  "pip-audit==2.8.0",
]

[project.scripts]
arqon-agent = "arqon_guardian.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
